--- a/popup/test.html
+++ b/popup/test.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Test</h1>
-    <p>Hi</p>
+    <p>Test: <a href="https://www.youtube.com/watch?v=G8voJ0xK5pc">link</a></p>
   </body>
 </html>
