added side panel

--- a/popup/test.html
+++ b/popup/test.html
@@ -1,9 +1,8 @@
 <html>
   <head>
     <title>Hello</title>
+    <script src="test.js"></script>
   </head>
   <body>
-    <h1>Test</h1>
-    <p>Test: <a href="https://www.youtube.com/watch?v=G8voJ0xK5pc">link</a></p>
   </body>
 </html>
